Break out AC_SUBST

--- a/configure.in
+++ b/configure.in
@@ -290,7 +290,14 @@ if [[ "$build_server" = 1 -a "$found" = "" ]]; then
 fi
 
 
-AC_SUBST(SUBDIR LDSH LDSHFLAGS PICFLAG SOEXT SOEXTVER LIBINC MKSO)
+AC_SUBST(SUBDIR)
+AC_SUBST(LDSH)
+AC_SUBST(LDSHFLAGS)
+AC_SUBST(PICFLAG)
+AC_SUBST(SOEXT)
+AC_SUBST(SOEXTVER)
+AC_SUBST(LIBINC)
+AC_SUBST(MKSO)
 
 MF=""
 for entry in ${SUBDIR}; do
