--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,20 @@
 debian/kcrap
 debian/*.log
 debian/*.substvars
+*.o
+*.a
+*.so
+*.so.*
+Makefile
+autom4te.cache/
+config.h
+config.log
+config.status
+configure
+server/kcrap_server
+server/modules_list.h
+test/test-ntlm
+test/test-ntlmv2
+test/test-ntlmv2s
+*~
+
